--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "compile": "tsc",
     "start": "npm run compile && node ./dist/index.js",
     "start:dev": "nodemon --watch src -e ts,js --exec 'ts-node ./src/index.ts'",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,11 +19,13 @@
     "@apollo/server": "^4.3.0",
     "@prisma/client": "^4.8.1",
     "apollo-server-express": "^3.11.1",
+    "eslint": "^8.33.0",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.5",
     "graphql-tools": "^8.3.15",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
     "prisma": "^4.8.1",
     "ts-node": "^10.9.1"
   },
