--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "@apollo/server": "^4.3.0",
     "@prisma/client": "^4.8.1",
     "apollo-server-express": "^3.11.1",
-    "eslint": "^8.33.0",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.5",
     "graphql-tools": "^8.3.15",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
     "prisma": "^4.8.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
+    "standard": "^17.0.0",
     "typescript": "^4.9.4"
   }
 }
