--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
   "dependencies": {
     "@apollo/server": "^4.3.0",
     "@prisma/client": "^4.8.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "apollo-server-express": "^3.11.1",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.5",
     "graphql-tools": "^8.3.15",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.33.0",
