--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -21,21 +21,25 @@
     "@prisma/client": "^4.8.1",
     "@typescript-eslint/parser": "^5.54.1",
     "apollo-server-express": "^3.11.1",
+    "eslint-plugin-jest": "^27.2.1",
     "graphql": "^16.6.0",
     "graphql-middleware": "^6.1.33",
     "graphql-shield": "^7.6.5",
     "graphql-tools": "^8.3.15",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^4.8.1",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "eslint": "^8.33.0",
+    "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
