--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
+    "jest-mock-extended": "^2.0.4",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "standard": "^17.0.0",
